# PainGob

./: README.md  main.py  pyproject.toml  structure.txt  test_db.py
collectors/: base_collector.py  collector_runner.py  reddit_collector.py  rss_collector.py
config/: settings.py
database/: db.py  models.py  session.py
scripts/: test_pipeline.py  test_reddit.py  test_rss.py
services/: post_service.py
