[project]
name = "paingoblin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.2",
    "beautifulsoup4>=4.15.0",
    "black>=26.5.1",
    "fastapi>=0.136.3",
    "feedparser>=6.0.12",
    "google-generativeai>=0.8.6",
    "httpx>=0.28.1",
    "openai>=2.41.1",
    "praw>=7.8.2",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "python-telegram-bot>=22.7",
    "ruff>=0.15.16",
    "sqlalchemy>=2.0.50",
]
